--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+@import '~ag-grid-community/styles/ag-grid.css';
+@import '~ag-grid-community/styles/ag-theme-alpine.css';
+html, body {
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    -webkit-overflow-scrolling: touch;
+ }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
