Added authentication and authorization to sheets.

--- a/src/app/complaint-dashboard/complaint-dashboard.component.html
+++ b/src/app/complaint-dashboard/complaint-dashboard.component.html
@@ -5,7 +5,7 @@
     Lodge a complaint by clicking the link above.
   </div>
   <div class="link">
-    <a mat-raised-button color="primary" routerLink="complaints"
+    <a mat-raised-button color="primary" (click)="authenticate()"
       >Manage complaints</a
     >
     <br /><br />
