--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,16 @@
-<article>
-  <p>Welcome to MIOM's complaints tracking system.</p>
-  <p>
+<section style="display: flex">
+  <img src="../../assets/civil-banner.jpg" alt="" srcset="" />
+</section>
+
+<article class="intro-article">
+  <p style="font-size: 18px; font-weight: 300">
+    Welcome to MIOM's complaints tracking system.
+  </p>
+  <p style="font-weight: 400">
     To lodge complaint online click
     <a routerLink="../complaints/new">here</a>.
   </p>
-  <p>
+  <p style="font-weight: 400; background: yellow">
     In case you need to file a complaint urgently, please visit the Maintenance
     office for quicker resolution.
   </p>
