--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,14 @@
-<mat-toolbar color="primary" class="toolbar">
-  <h1>SAIL</h1>
-  <div class="nav-items">
-    <a mat-button routerLink="home">HOME</a>
-    <a mat-button routerLink="complaints">COMPLAINTS</a>
+<mat-toolbar class="toolbar">
+  <div class="navbar">
+    <img
+      src="../../assets/sail-logo.png"
+      alt="sail logo"
+      srcset=""
+      width="40px"
+    />
+    <div class="nav-items">
+      <a mat-button routerLink="home">Home</a>
+      <a mat-button routerLink="complaints">Complaints</a>
+    </div>
   </div>
 </mat-toolbar>
