--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,15 +2,21 @@
 }
 
 .app-content{
-    padding: 84px 24px 84px 24px;
-    height: 100%;
+    width: 80%;
+    margin: 60px auto;
 }
 
 footer {
     bottom: 0;
     left: 0;
-    padding: 24px;
+    padding: 24px 0;
     background-color: aliceblue;
     width: 100%;
     box-shadow: 0 2px 5px #0000004d;
+}
+
+.footer-items{
+    width: 80%;
+    display: flex;
+    margin: 0 auto;
 }
