--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,31 +4,33 @@
   <router-outlet></router-outlet>
 </div>
 <footer>
-  <a
-    mat-button
-    color="primary"
-    target="_blank"
-    href="https://www.sail.co.in/en/home"
-    >SAIL official site
-    <mat-icon
-      aria-hidden="false"
-      aria-label="visit sail official site"
-      style="font-size: 100%"
-      >open_in_new</mat-icon
+  <div class="footer-items">
+    <a
+      mat-button
+      color="primary"
+      target="_blank"
+      href="https://www.sail.co.in/en/home"
+      >SAIL official site
+      <mat-icon
+        aria-hidden="false"
+        aria-label="visit sail official site"
+        style="font-size: 100%"
+        >open_in_new</mat-icon
+      >
+    </a>
+    <a
+      mat-button
+      color="primary"
+      mat-button
+      target="_blank"
+      href="https://sailcareers.com"
+      >SAIL careers
+      <mat-icon
+        aria-hidden="false"
+        aria-label="visit sail career site"
+        style="font-size: 100%"
+        >open_in_new</mat-icon
+      ></a
     >
-  </a>
-  <a
-    mat-button
-    color="primary"
-    mat-button
-    target="_blank"
-    href="https://sailcareers.com"
-    >SAIL careers
-    <mat-icon
-      aria-hidden="false"
-      aria-label="visit sail career site"
-      style="font-size: 100%"
-      >open_in_new</mat-icon
-    ></a
-  >
+  </div>
 </footer>
