--- a/src/app/complaint-dashboard/complaint-dashboard.component.css
+++ b/src/app/complaint-dashboard/complaint-dashboard.component.css
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    margin: 24px;
+    background: aliceblue;
+    border-radius: 10px;
 }
 .link{
     padding: 24px;
