--- a/src/app/complaint-form/complaint-form.component.css
+++ b/src/app/complaint-form/complaint-form.component.css
@@ -4,3 +4,15 @@ mat-radio-button {
 mat-form-field{
     margin-right: 12px;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
