--- a/src/app/complaint-form/complaint-form.component.html
+++ b/src/app/complaint-form/complaint-form.component.html
@@ -1,5 +1,22 @@
 <h2>Submit a new complaint</h2>
 <hr />
+<p
+  style="font-weight: 500; color: red"
+  *ngIf="
+    name.invalid ||
+    cont.invalid ||
+    ocFrom.invalid ||
+    ocDpt.invalid ||
+    ocStf.invalid ||
+    qtrType.invalid ||
+    qtrBlock.invalid ||
+    qtrUnit.invalid ||
+    newAlot.invalid ||
+    details.invalid
+  "
+>
+  Please enter the details marked with *
+</p>
 <form (ngSubmit)="submitForm()">
   <mat-label>Your details</mat-label> <br /><br />
   <mat-form-field appearance="outline" style="width: 300px">
@@ -149,9 +166,6 @@
       <mat-option value="Roof">Roof</mat-option>
       <mat-option value="Water supply">Water supply</mat-option>
       <mat-option value="Sanitary">Sanitary</mat-option>
-      <mat-option value="Sewerage line Repair only"
-        >Sewerage line Repair only</mat-option
-      >
       <mat-option value="Miscellaneous">Miscellaneous</mat-option>
     </mat-select>
   </mat-form-field>
