--- a/src/app/complaint-dashboard/complaint-dashboard.component.html
+++ b/src/app/complaint-dashboard/complaint-dashboard.component.html
@@ -1,23 +1,1 @@
-<div style="display: flex">
-  <img
-    src="../../assets/tracking-graphics.svg"
-    alt=""
-    style="width: 60%; margin: auto"
-  />
-</div>
-<div class="links">
-  <div class="link">
-    <a mat-raised-button routerLink="new">Lodge a new complaint</a>
-    <br /><br />
-    <p style="font-weight: 300">
-      Lodge a complaint by clicking the link above.
-    </p>
-  </div>
-  <div class="link">
-    <a mat-raised-button color="primary" (click)="authenticate()"
-      >Manage complaints</a
-    >
-    <br /><br />
-    <p style="font-weight: 300">For managers: Track and manage complaints.</p>
-  </div>
-</div>
+Upcoming feature to view your lodged complaints
