--- a/src/app/complaint-form/complaint-form.component.html
+++ b/src/app/complaint-form/complaint-form.component.html
@@ -25,7 +25,7 @@
       matInput
       placeholder="Complainee name"
       type="text"
-      [(ngModel)]="selectedComplaint.complaineeName"
+      [(ngModel)]="selectedComplaint.name"
       name="name"
       required
       #name="ngModel"
@@ -60,7 +60,7 @@
   <mat-form-field appearance="outline">
     <mat-label>You are from:</mat-label>
     <mat-select
-      [(ngModel)]="selectedComplaint.fromSail"
+      [(ngModel)]="selectedComplaint.organization"
       name="fromSail"
       required
       #ocFrom="ngModel"
@@ -148,7 +148,7 @@
   <mat-form-field appearance="outline">
     <mat-label>Is this a new allotment?</mat-label>
     <mat-select
-      [(ngModel)]="selectedComplaint.newAllotment"
+      [(ngModel)]="selectedComplaint.isThisANewAllotment"
       name="newAllotment"
       required
       #newAlot="ngModel"
@@ -159,7 +159,7 @@
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Nature of work</mat-label>
-    <mat-select [(ngModel)]="selectedComplaint.workNature" name="workNature">
+    <mat-select [(ngModel)]="selectedComplaint.natureOfWork" name="workNature">
       <mat-option value="Cement">Cement</mat-option>
       <mat-option value="Wood">Wood</mat-option>
       <mat-option value="Painting">Painting</mat-option>
